[project]
name = "HMA_Main"
version = "0.1.0"
description = "HMA Data Ingestion System for S3"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "streamlit>=1.49.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "sqlalchemy>=2.0.43",
    "pymysql>=1.1.2",
    "tabulate>=0.9.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
hma-ingest = "hma_main.cli:main"
hma-producer = "hma_main.microservices.producer:main"
hma-worker = "hma_main.microservices.worker:main"
hma-api = "hma_main.microservices.api:run_server"
hma-db = "hma_main.database.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hma_main"]
